# misbar-ai

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 0001_receipts.sql  0002_receipt_io.sql  0003_zk_proof.sql  0004_zk_traces.sql
backend/scripts/: calibration.json  zk_setup.sh
backend/src/: domain.rs  main.rs  store.rs
backend/src/api/: mod.rs
backend/src/attestation/: mod.rs
backend/src/attestation/hashing/: mod.rs
backend/src/attestation/receipts/: mod.rs
backend/src/attestation/signatures/: mod.rs
backend/src/attestation/zk/: decode.rs  mod.rs
backend/src/execution/: mod.rs
backend/src/execution/features/: mod.rs
backend/src/execution/inference/: mod.rs
backend/src/gateway/: mod.rs
backend/src/registry/: mod.rs
backend/src/verification/: mod.rs
backend/src/verification/exports/: mod.rs
backend/src/verification/verifier/: mod.rs
frontend/: .dockerignore  Dockerfile  next.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(console)/: layout.tsx
frontend/components/: CopyJsonButton.tsx  HashDisplay.tsx  LocaleToggle.tsx  Logo.tsx  Ltr.tsx  Nav.tsx  SarIcon.tsx  StatCard.tsx  VerifyPanel.tsx  ZkTraceView.tsx
frontend/lib/: api.ts  status.ts  verify.ts
frontend/lib/i18n/: LocaleProvider.tsx  dictionaries.ts  format.ts  server.ts
model/: README.md  export_onnx.py  feature_info.json  generate.py  model.onnx  model.pkl  requirements.txt  scoring.py  synthetic_credit.csv  train.py  verify_export.py  view_pkl.py
(+5 files in other folders)
